# happyfox

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  bump_version.py  credentials.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup_gmail_credentials.py  setup_gmail_oauth.py  test_all.py  test_gmail.py  test_gmail_integration.py
app/: __init__.py  main.py  version.py
app/api/: routes.py
app/core/: __init__.py  config.py  database.py  rule_engine.py
app/models/: __init__.py  email.py  rule.py
app/schemas/: __init__.py  rule.py
app/services/: __init__.py  email.py  gmail_service.py  rule.py
docker/: init.sql
migrations/: README  env.py
migrations/versions/: create_emails_table.py
tests/: conftest.py
tests/integration/: test_api.py  test_gmail_api.py  test_gmail_integration.py  test_gmail_mock.py
tests/unit/: test_gmail_queries.py  test_gmail_service.py  test_gmail_simple.py  test_rule_engine.py  test_rule_service.py
